--- a/Semana 2/index.html
+++ b/Semana 2/index.html
@@ -11,7 +11,7 @@
   <div class="contenedor" id="principal">
     <h1 class="titulo">Bienvenido a Demon Slayer</h1>
     <p class="parrafo">Esta es una pagina donde podrás spoilearte de los sucesos de la serie.</p>
-    <button class="boton">Haz clic aquí</button>
+    <a href="http://127.0.0.1:5500/index.html">Haz click aquí</a>
   </div>
 
 </body>
